--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <div id="calc3"></div>
+    <div id="calc2"></div>
     <div id="calc">
-        <div class="calculator">
+        <!-- <div class="calculator">
             <div class="background">
                 <div class="display">
                     <div class="result">145</div>
@@ -39,7 +41,7 @@
                     <div class="btn">.</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="./js/main.js" type="module"></script>
